# osarchiver

./: .gitignore  AUTHORS  CONTRIBUTING.md  CONTRIBUTORS  MAINTAINERS  README.md  archiver_sample.ini  diagram.asciio  requirements.txt  setup.cfg  setup.py
debian/: changelog  control  copyright  rules
osarchiver/: __init__.py  archiver.py  config.py  errors.py  main.py
osarchiver/common/: __init__.py  db.py
osarchiver/destination/: __init__.py  base.py
osarchiver/destination/db/: __init__.py  db.py  errors.py
osarchiver/destination/file/: __init__.py  base.py  csv.py  sql.py
osarchiver/destination/file/remote_store/: __init__.py  base.py  swift.py
osarchiver/source/: __init__.py  base.py  db.py
