[metadata]
name = osarchiver
summary = Openstack DB archiver
description-file =
    README.md
author = OVHcloud SAS
author-email = opensource@ovh.net
home-page = https://github.com/ovh/osarchiver
python-requires = >=3.5
classifier =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3.2
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Topic :: Software Development :: Libraries :: Python Module

[files]
packages =
    osarchiver

[entry_points]
console_scripts =
    osarchiver = osarchiver.main:run
